# deco-test

./: README.md
DECO-client/: Cargo.toml  README.md
DECO-client/rustls/: Cargo.toml  LICENSE-ISC  LICENSE-MIT
DECO-client/rustls-mio/: Cargo.toml
DECO-client/rustls-mio/examples/: tlsclient.rs
DECO-client/rustls/src/: 2pc_hmac_expand_client.sh  2pc_hmac_hs_msg_client.sh  2pc_hmac_key_iopad_client.sh  2pc_make_emp.sh  2pc_tls12_ems_s1s2sum.sh  2pc_tls12_ems_s1s2sum_secp256r1.sh  2pc_tls12_expand.sh  2pc_tls12_sha256.sh  conn.rs  cookie.txt  kx.rs  lib.rs  record_layer.rs  suites.rs  vecbuf.rs  verify.rs
DECO-client/rustls/src/client/: client_conn.rs  ectf.rs  hs.rs  tls12.rs  tls12_point.rs  tls13.rs
DECO-client/rustls/src/curl/: curl_clp.sh  curl_clp_backup.sh  curl_polyalumni.sh  curl_towngas.sh  curl_towngas_backup.sh  curl_yalealumni.sh
DECO-client/rustls/src/emp/emp-ot/test/: CMakeLists.txt
DECO-client/rustls/src/emp/emp-sh2pc/circuits/: tls12_ems_s1s2sum_secp256r1.txt  tls12_sha256.txt
DECO-client/rustls/src/emp/emp-sh2pc/emp-sh2pc/: emp-sh2pc.h  sh_eva.h
DECO-client/rustls/src/emp/emp-sh2pc/test/: 2pc_hmac_expand.cpp  2pc_hmac_key_iopad.cpp  2pc_hmac_msg.cpp  2pc_tls12_ems_s1s2sum.cpp  2pc_tls12_ems_s1s2sum_secp256r1.cpp  2pc_tls12_expand.cpp  2pc_tls12_sha256.cpp
DECO-client/rustls/src/emp/emp-tool/emp-tool/circuits/: integer.hpp
DECO-client/rustls/src/emp/emp-tool/test/: CMakeLists.txt
DECO-client/rustls/src/msgs/: base.rs  codec.rs  enums.rs  handshake.rs  message.rs
DECO-client/rustls/src/post/: post_clp.sh  post_clp.txt  post_hkbucs.txt  post_polyalumni.sh  post_polyalumni.txt  post_towngas.sh  post_towngas.txt  post_yalealumni.sh
DECO-client/rustls/src/server/: tls13.rs
DECO-client/rustls/src/tls12/: cipher.rs  mod.rs  prf.rs
DECO-client/rustls/src/tls13/: key_schedule.rs  mod.rs
DECO-client/rustls/tests/: api.rs
DECO-ring/: Cargo.toml
DECO-ring/crypto/curve25519/: curve25519.c
DECO-ring/crypto/fipsmodule/ec/: ecp_nistz256.c
DECO-ring/src/: aead.rs  agreement.rs  cpu.rs  digest.rs  ec.rs  endian.rs  hkdf.rs  hmac.rs  lib.rs  test.rs
DECO-ring/src/aead/: aes.rs  aes_gcm.rs  chacha.rs  chacha20_poly1305_openssh.rs  gcm.rs
DECO-ring/src/digest/: sha2.rs
DECO-ring/src/ec/: curve25519.rs  keys.rs  suite_b.rs
DECO-ring/src/ec/curve25519/: ops.rs  scalar.rs  x25519.rs
DECO-ring/src/ec/curve25519/ed25519/: signing.rs  verification.rs
DECO-ring/src/ec/suite_b/: ops.rs
DECO-ring/src/ec/suite_b/ops/: p256.rs
DECO-verifier/: README.md  output.html
DECO-verifier/rustls/: Cargo.toml  LICENSE-APACHE  install.sh
DECO-verifier/rustls-mio/: Cargo.toml
DECO-verifier/rustls/src/: 2pc_hmac_expand_verifier.sh  2pc_hmac_hs_msg_verifier.sh  2pc_hmac_key_iopad_verifier.sh  2pc_tls12_ems_s1s2sum.sh  2pc_tls12_ems_s1s2sum_secp256r1.sh  2pc_tls12_expand.sh  2pc_tls12_sha256.sh  cipher.rs  kx.rs  lib.rs  main.rs  record_layer.rs  suites.rs
DECO-verifier/rustls/src/client/: client_conn.rs  ectf.rs  hs.rs  tls13.rs
DECO-verifier/rustls/src/emp/emp-sh2pc/: .gitignore  CMakeLists.txt
DECO-verifier/rustls/src/emp/emp-sh2pc/circuits/: circuit_2pc_hmac_key_1_2_shared_normal.txt  circuit_2pc_hmac_key_iopad_self_IV_shared_shared.txt  tls12_ems_s1s2sum.txt
DECO-verifier/rustls/src/emp/emp-sh2pc/emp-sh2pc/: semihonest.h  sh_gen.h
DECO-verifier/rustls/src/emp/emp-sh2pc/test/: 2pc_hmac_expand.cpp  2pc_hmac_key_iopad.cpp  2pc_hmac_msg.cpp  2pc_tls12_ems_s1s2sum.cpp  2pc_tls12_ems_s1s2sum_secp256r1.cpp  2pc_tls12_expand.cpp  2pc_tls12_sha256.cpp  CMakeLists.txt
DECO-verifier/rustls/src/emp/emp-tool/emp-tool/circuits/: integer.h  integer.hpp
DECO-verifier/rustls/src/msgs/: base.rs
DECO-verifier/rustls/src/server/: tls13.rs
DECO-verifier/rustls/src/tls12/: cipher.rs  mod.rs
DECO-verifier/rustls/src/tls13/: key_schedule.rs  mod.rs
