[package]
name = "rustls-mio"
version = "0.0.1"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
description = "Rustls example code and tests that depend on mio."
publish = false

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
log = { version = "0.4.4", optional = true }
rustls = { path = "../rustls" }
rustls-pemfile = "0.2.0"
sct = "0.7"
# libc = {version = "0.2.106", features = ["rustc_private"] }
libc = "0.2"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
ct-logs = "0.9"
docopt = "~1.1"
env_logger = "0.9.0"
mio = { version = "0.8.4", features = ["os-poll", "net"] }
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.22"
ring = "0.16.20"

# ring = {version = "0.16.20", features = ["rustc_private"] }
# libc = {version = "0.2.106", features = ["rustc_private"] }

# libc = "0.2"
# ring = { path = "../../ring_revised" }

[[example]]
name = "tlsclient"
path = "examples/tlsclient.rs"

[[example]]
name = "tlsserver"
path = "examples/tlsserver.rs"
